firmware/STM32_Workspace/.metadata/.plugins/org.eclipse.cdt.ui/Quantum_Config.build.log
15:02:36 **** Incremental Build of configuration Debug for project Quantum_Config ****
make all 
Building file: ../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c
Invoking: MCU GCC Compiler
/Users/christiansager/Documents/Klanghabitat_Quantum/firmware/STM32_Workspace/Quantum_Config/Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F769xx -I"/Users/christiansager/Documents/Klanghabitat_Quantum/firmware/STM32_Workspace/Quantum_Config/Inc" -I"/Users/christiansager/Documents/Klanghabitat_Quantum/firmware/STM32_Workspace/Quantum_Config/Drivers/STM32F7xx_HAL_Driver/Inc" -I"/Users/christiansager/Documents/Klanghabitat_Quantum/firmware/STM32_Workspace/Quantum_Config/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy" -I"/Users/christiansager/Documents/Klanghabitat_Quantum/firmware/STM32_Workspace/Quantum_Config/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"/Users/christiansager/Documents/Klanghabitat_Quantum/firmware/STM32_Workspace/Quantum_Config/Drivers/CMSIS/Include"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.d" -MT"Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.o" -o "Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.o" "../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c"
../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c: In function 'USB_WritePacket':
../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c:958:53: error: expected ')' before 'uint32_t'
       USBx_DFIFO((uint32_t)ch_ep_num) = *((__packed uint32_t *)pSrc);
                                                     ^~~~~~~~
../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c:958:64: error: expected ')' before 'pSrc'
       USBx_DFIFO((uint32_t)ch_ep_num) = *((__packed uint32_t *)pSrc);
                                                                ^~~~
../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c: In function 'USB_ReadPacket':
../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c:987:16: error: expected ')' before 'uint32_t'
     *(__packed uint32_t *)pDest = USBx_DFIFO(0U);
                ^~~~~~~~
../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c:987:5: warning: statement with no effect [-Wunused-value]
     *(__packed uint32_t *)pDest = USBx_DFIFO(0U);
     ^~~~~~~~~~~~~~~~~~~
../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c:987:27: error: expected ';' before 'pDest'
     *(__packed uint32_t *)pDest = USBx_DFIFO(0U);
                           ^~~~~
../Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c:980:12: warning: unused variable 'USBx_BASE' [-Wunused-variable]
   uint32_t USBx_BASE = (uint32_t)USBx;
            ^~~~~~~~~
make: *** [Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.o] Error 1

15:02:37 Build Finished (took 557ms)

